--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script>
             var sound1= new buzz.sound("./Sound/skater.mp3");
             var sound2= new buzz.sound("./Sound/keys.mp3");
-            var sound3= new buzz.sound("./Sound/water.mp3");
+            var sound3= new buzz.sound("./Sound/Water.mp3");
 
             window.onload = function(){
                 document.getElementById('skate').addEventListener('mouseover',function () {sound1.play();});
